--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Projeto_Integrador (5 Periodo)</string>
+    <string name="facebook_app_id">678995642890954</string> <string name="fb_login_protocol_scheme">fb678995642890954</string>
 </resources>
